@@ -1,3 +1,9 @@
+2023-09-02 23:08
+1. Локально установлены линтеры flake8 и mypy.
+2. Добавлен tox.ini с минимальными настройками для flake8.
+3. В requirements.yml экспортировано окружение с установленными линтерами.
+
+
 2023-09-02 22:39
 1. Добален pyproject.toml с настройками форматера black.
 2. Файл sources/useful_funcs.py отформатирован в соответствии с новыми настройками.
